fix css margin che era eccessivo e wrappava troppo presto, fix js con l'aggiunta dei colori per le rispettive caselle

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body{
     color: chartreuse;
     width: 40px;
     height: 40px;
-    margin: 4px;
+    margin: 3px;
     background-color: white;
     border-radius: 4px;
 }
